Added filter placeholders in dashboard template

--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -26,6 +26,19 @@
 			</div>
 		</div>
 
+		<!-- Filters -->
+		<div id="filters">
+			By milestone:
+			<select>
+				<option name="8">Bugs</options>
+			</select>
+
+			By label:
+			<select>
+				<option name="Critical">Critical</options>
+			</select>
+		</div>
+
 		<!-- Leaderboards -->
 		{% macro leaderboard(id, title, members) %}
 		<div class="leaderboard" id="{{ id }}">
