--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -28,15 +28,21 @@
 
 		<!-- Filters -->
 		<div id="filters">
-			By milestone:
-			<select>
-				<option name="8">Bugs</options>
-			</select>
+			<form method="get">
+				By milestone:
+				<select name="milestone">
+					<option value="">None</options>
+					<option value="8">Bugs</options>
+				</select>
 
-			By label:
-			<select>
-				<option name="Critical">Critical</options>
-			</select>
+				By label:
+				<select name="label">
+					<option value="">None</options>
+					<option value="Critical">Critical</options>
+				</select>
+
+				<input type="submit" value="Apply">
+			</div>
 		</div>
 
 		<!-- Leaderboards -->
