keep selected reporting unit #6

--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -27,7 +27,8 @@
 		</div>
 
         <div class="filter">
-            <label for="reporting_unit">Last</label>
+            <input type="hidden" value="{{period_label}}" id="hid_reporting_unit" />
+            <span for="reporting_unit">Last: </span>
             <select id="reporting_unit">
                 <option value="day">Day</value>
                 <option value="week">Week</value>
