fixed current period #6

--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -28,9 +28,9 @@
 
         <div class="filter">
             <input type="hidden" value="{{period_label}}" id="hid_reporting_unit" />
-            <span for="reporting_unit">Last: </span>
+            <span for="reporting_unit">Current: </span>
             <select id="reporting_unit">
-                <option value="day">Day</value>
+                <option value="sprint">Sprint</value>
                 <option value="week">Week</value>
                 <option value="month">Month</value>
             </select>
