Made filters change themselves on change

--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -26,16 +26,6 @@
       </div>
     </div>
 
-    <div class="filter">
-        <input type="hidden" value="{{period_label}}" id="hid_reporting_unit" />
-        <span for="reporting_unit">Current: </span>
-        <select id="reporting_unit">
-            <option value="sprint">Sprint</value>
-            <option value="week">Week</value>
-            <option value="month">Month</value>
-        </select>
-    </div>
-
     <!-- Filters -->
     <div id="filters">
       <form method="get">
@@ -63,8 +53,18 @@
                                     {% endfor %}
         </select>
 
-        <input type="submit" value="Apply">
+        <input type="hidden" value="{{period_label}}" id="hid_reporting_unit" />
+          <span for="reporting_unit">Period: </span>
+          <select id="reporting_unit">
+              <option value="sprint">Sprint</value>
+              <option value="week">Week</value>
+              <option value="month">Month</value>
+          </select>
       </div>
+
+
+
+
     </div>
 
     <!-- Leaderboards -->
