Fixed filter aligning

--- a/templates/dashboard.jinja2
+++ b/templates/dashboard.jinja2
@@ -27,31 +27,34 @@
     </div>
 
     <!-- Filters -->
-    <div id="filters">
-      <form method="get">
-        By milestone:
-        <select name="milestone">
-          <option value="">No milestone</options>
-                                    {% for milestone in milestones %}
-                                      {% if milestone == current_milestone %}
-          <option value="{{milestone}}" selected>{{milestone}}</options>
-                                      {% else %}
-          <option value="{{milestone}}">{{milestone}}</options>
-                                      {% endif %}
-                                    {% endfor %}
-        </select>
+    <div>
+      <span id="filters">
+        <form method="get">
+          By milestone:
+          <select name="milestone">
+            <option value="">No milestone</options>
+                                      {% for milestone in milestones %}
+                                        {% if milestone == current_milestone %}
+            <option value="{{milestone}}" selected>{{milestone}}</options>
+                                        {% else %}
+            <option value="{{milestone}}">{{milestone}}</options>
+                                        {% endif %}
+                                      {% endfor %}
+          </select>
 
-        By label:
-        <select name="label">
-          <option value="">No label</options>
-                                    {% for label in labels %}
-                                      {% if label == current_label %}
-            <option value="{{label}}" selected>{{label}}</options>
-                                      {% else %}
-            <option value="{{label}}">{{label}}</options>
-                                      {% endif %}
-                                    {% endfor %}
-        </select>
+          By label:
+          <select name="label">
+            <option value="">No label</options>
+                                      {% for label in labels %}
+                                        {% if label == current_label %}
+              <option value="{{label}}" selected>{{label}}</options>
+                                        {% else %}
+              <option value="{{label}}">{{label}}</options>
+                                        {% endif %}
+                                      {% endfor %}
+          </select>
+        </form>
+      </span>
 
         <input type="hidden" value="{{period_label}}" id="hid_reporting_unit" />
           <span for="reporting_unit">Period: </span>
@@ -61,9 +64,6 @@
               <option value="month">Month</value>
           </select>
       </div>
-
-
-
 
     </div>
 
